--- a/petstagram/templates/pets/pet-details-page.html
+++ b/petstagram/templates/pets/pet-details-page.html
@@ -3,7 +3,6 @@
 {% block content %}
 
     <main>
-
         <div class="pet-profile">
             <!-- Start Pet Personal Data Section -->
             <div class="profile">
@@ -11,26 +10,26 @@
                     <div class="profile_img">
                         <div class="image">
                             <!-- Pet URL Image -->
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgoIHq82qLYnvomfz5ZkW5CLQ8VNxCyI-hUw&usqp=CAU"
+                            <img src="{{ pet.personal_photo }}"
                                  alt="img8">
                         </div>
                     </div>
                     <div class="personal">
                         <div class="edit">
                             <!-- Pet Name -->
-                            <p>Sasho</p>
+                            <p>{{ pet.name }}</p>
                             <!-- Pet Edit Button -->
-                            <a href="">
-                                <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}" alt="edit button">
+                            <a href="{% url 'edit pet' 'username'  pet.slug %}">
+                                <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                             </a>
                             <!-- Pet Delete Button -->
-                            <a href="">
-                                <img class="bin-img" src="{% static '/images/icon-remove-22.jpg' %}" alt="bin button">
+                            <a href="{% url 'delete pet' 'username' pet.slug %}">
+                                <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                             </a>
                         </div>
                         <div class="data">
                             <!-- Pet Total Photos -->
-                            <span>4</span>
+                            <span>{{ all_photos.count }}</span>
                             <p>photos</p>
                         </div>
                     </div>
@@ -39,12 +38,12 @@
             <!-- End Pet Personal Data Section -->
 
             <div class="pet-posts">
+                {% if all_photos %}
                 <!-- IF Photos Start Pet Photos Post Section -->
-                <!-- Start First Pet Photo Post -->
-                {% include 'common/pets-posts.html' %}
-
-                <img class="no-posts" src="{% static '/images/no_posts.png' %}" alt="no posts image">
-
+                    {% include 'common/pets-posts.html' %}
+                {% else %}
+                <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
+                {% endif %}
             </div>
         </div>
     </main>
