--- a/petstagram/templates/pets/pet-add-page.html
+++ b/petstagram/templates/pets/pet-add-page.html
@@ -1,34 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <main>
-
         <!-- Start Add Pet Section-->
         <div class="edit-delete edit-photo">
             <h2>Add pet</h2>
 
             <!-- Start Add Pet Form -->
-            <form action="#">
-                <p>
-                    <label for="pet-name">Pet name: </label>
-                    <input type="text" placeholder="Pet name">
-                </p>
-                <p>
-                    <label for="pet-date">Date of birth: </label>
-                    <input type="date">
-                </p>
-                <p>
-                    <label for="pet-image">Link to image: </label>
-                    <input type="text" placeholder="Link to image">
-                </p>
+            <form method="post" action="{% url 'add pet' %}">
+                {{ form }}
+                {% csrf_token %}
                 <!-- Add Pet Button -->
                 <button class="add-btn" type="submit">Add Pet</button>
             </form>
             <!-- End Add Pet Form -->
-
         </div>
         <!-- End Add Pet Section -->
-
-    </main>
 
 {% endblock %}
