--- a/recipes_app/templates/details.html
+++ b/recipes_app/templates/details.html
@@ -49,8 +49,8 @@
 Take everything out of the pot. Strain the broth. Pick the meat off of the bones and chop the carrots, celery and onion. Season the broth with salt, pepper and chicken bouillon to taste, if desired. Return the chicken, carrots, celery and onion to the pot, stir together, and serve.
                 </div>
                 <div class="buttons-container">
-                    <a class="button edit" href="./edit.html">Edit</a>
-                    <a class="button delete" href="./delete.html">Delete</a>
+                    <a class="button edit" href="edit.html">Edit</a>
+                    <a class="button delete" href="delete.html">Delete</a>
                 </div>
             </div>
         </div>
