--- a/recipes_app/templates/index.html
+++ b/recipes_app/templates/index.html
@@ -1,21 +1,5 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/style.css">
-    <title>Recipes</title>
-</head>
-
-<body>
-
-    <nav>
-        <ul>
-            <img src="./static/images/chef.png" alt="chef">
-            <li class="title"><a href="/">Recipes</a></li>
-            <li><a href="create.html">Add Recipe</a></li>
-        </ul>
-    </nav>
+{% extends 'base.html' %}
+{% block content %}
     <div class="container">
 
         <h1>My Recipes</h1>
@@ -29,9 +13,9 @@
                     the meat off of the bones and chop the carrots, celery and onion. Season the broth with salt, pepper and chicken bouillon to taste, if desired. Return the chicken, carrots, celery and onion to the pot, stir together, and serve.
                 </div>
                 <div class="buttons-container">
-                    <a class="button detail" href="details.html">Details</a>
-                    <a class="button edit" href="edit.html">Edit</a>
-                    <a class="button delete" href="delete.html">Delete</a>
+                    <a class="button detail" href="./details.html">Details</a>
+                    <a class="button edit" href="./edit.html">Edit</a>
+                    <a class="button delete" href="./delete.html">Delete</a>
                 </div>
             </div>
 
@@ -43,9 +27,9 @@
                     the maple syrup mixture until evenly coated on all sides. Cook salmon in the preheated pan until fish flakes easily with a fork, 5 to 7 minutes per side.
                 </div>
                 <div class="buttons-container">
-                    <a class="button detail" href="details.html">Details</a>
-                    <a class="button edit" href="edit.html">Edit</a>
-                    <a class="button delete" href="delete.html">Delete</a>
+                    <a class="button detail" href="./details.html">Details</a>
+                    <a class="button edit" href="./edit.html">Edit</a>
+                    <a class="button delete" href="./delete.html">Delete</a>
                 </div>
             </div>
 
@@ -53,7 +37,4 @@
 
     </div>
 
-
-</body>
-
-</html>
+{% endblock %}
