--- a/recipes_app/templates/create.html
+++ b/recipes_app/templates/create.html
@@ -6,17 +6,10 @@
         <h1>Create Recipe</h1>
         <div class="items-container">
             <div class="item">
-                <form method="POST">
-                    <label for="title">Title</label>
-                    <input type="text" name="title" maxlength="30" required="" id="id_title">
-                    <label for="imageURL">Image URL</label>
-                    <input type="url" name="image_url" maxlength="200" required="" id="id_image_url">
-                    <label for="description">Description</label>
-                    <textarea name="description" cols="40" rows="10" required="" id="id_description"></textarea>
-                    <label for="ingredients">Ingredients</label>
-                    <input type="text" name="ingredients" maxlength="250" required="" id="id_ingredients">
-                    <label for="time">Time (Minutes)</label>
-                    <input type="number" name="time" required="" id="id_time">
+                <form method="POST" action="{% url 'create' %}">
+                    {% csrf_token %}
+                    {{ form }}
+
                     <input type="submit" value="Create">
                 </form>
             </div>
