--- a/recipes_app/templates/details.html
+++ b/recipes_app/templates/details.html
@@ -3,45 +3,30 @@
 {% block content %}
 
     <div class="container">
-
         <h1>Recipe Details</h1>
         <div class="items-container">
             <div class="item">
-                <h2>Homemade Chicken Soup</h2>
-                <img class="detail-img" src="https://i.ytimg.com/vi/o91gT73mQhg/maxresdefault.jpg" alt="recipe-image">
+                <h2>{{ recipe.title }}</h2>
+                <img class="detail-img" src="{{ recipe.image_url }}" alt="{{ recipe.title }}">
                 <div class="time">
                     <img src="{% static 'images/clock.png' %}">
-                    <p>30min</p>
+                    <p>{{ recipe.time }}min</p>
                 </div>
                 <h3>Ingredients</h3>
+
                 <ul>
-
-                    <li>1 (3 pound) whole chicken</li>
-
-                    <li>4 medium (blank)s carrots halved</li>
-
-                    <li>4 stalks celery halved</li>
-
-                    <li>1 large onion halved</li>
-
-                    <li>water to cover</li>
-
-                    <li>salt and pepper to taste</li>
-
-                    <li>1 teaspoon chicken bouillon granules</li>
+                    {% for product in ingredients %}
+                    <li>{{ product }}</li>
+                    {% endfor %}
 
                 </ul>
                 <h3>How to prepare?</h3>
                 <div class="recipe-info-full">
-                    Put the chicken, carrots, celery and onion in a large soup pot and cover with cold water. Heat and
-                    simmer, uncovered, until the chicken meat falls off of the bones (skim off foam every so often).
-                    Take everything out of the pot. Strain the broth. Pick the meat off of the bones and chop the
-                    carrots, celery and onion. Season the broth with salt, pepper and chicken bouillon to taste, if
-                    desired. Return the chicken, carrots, celery and onion to the pot, stir together, and serve.
+                    {{ recipe.description }}
                 </div>
                 <div class="buttons-container">
-                    <a class="button edit" href="./edit.html">Edit</a>
-                    <a class="button delete" href="./delete.html">Delete</a>
+                    <a class="button edit" href="{% url 'edit' pk=recipe.pk %}">Edit</a>
+                    <a class="button delete" href="{% url 'delete' pk=recipe.pk %}">Delete</a>
                 </div>
             </div>
         </div>
