--- a/recipes_app/templates/edit.html
+++ b/recipes_app/templates/edit.html
@@ -6,22 +6,9 @@
         <h1>Edit Recipe</h1>
         <div class="items-container">
             <div class="item">
-                <form method="POST">
-                    <label for="title">Title</label>
-                    <input type="text" name="title" value="Homemade Chicken Soup" maxlength="30" required=""
-                           id="id_title">
-                    <label for="imageURL">Image URL</label>
-                    <input type="url" name="image_url" value="https://i.ytimg.com/vi/o91gT73mQhg/maxresdefault.jpg"
-                           maxlength="200" required="" id="id_image_url">
-                    <label for="description">Description</label>
-                    <textarea name="description" cols="40" rows="10" required="" id="id_description">Put the chicken, carrots, celery and onion in a large soup pot and cover with cold water. Heat and simmer, uncovered, until the chicken meat falls off of the bones (skim off foam every so often).
-Take everything out of the pot. Strain the broth. Pick the meat off of the bones and chop the carrots, celery and onion. Season the broth with salt, pepper and chicken bouillon to taste, if desired. Return the chicken, carrots, celery and onion to the pot, stir together, and serve.</textarea>
-                    <label for="ingredients">Ingredients</label>
-                    <input type="text" name="ingredients"
-                           value="1 (3 pound) whole chicken, 4 medium (blank)s carrots halved, 4 stalks celery halved, 1 large onion halved, water to cover, salt and pepper to taste, 1 teaspoon chicken bouillon granules"
-                           maxlength="250" required="" id="id_ingredients">
-                    <label for="time">Time (Minutes)</label>
-                    <input type="number" name="time" value="30" required="" id="id_time">
+                <form method="POST" action="{% url 'edit' pk=recipe.pk %}">
+                {{ form }}
+                    {% csrf_token %}
                     <input type="submit" class="button edit" value="Edit">
                 </form>
             </div>
