--- a/online_library_app/templates/book/book-details.html
+++ b/online_library_app/templates/book/book-details.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/static/images/library.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <title>Online Books Library</title>
-</head>
-
-<body>
-    <div id="container">
-        <header id="site-header">
-
-            <!-- Navigation -->
-            <nav class="navbar">
-                <section class="navbar-dashboard">
-                    <a href="#">Dashboard</a>
-                    <div id="user">
-                        <span>Welcome, Peter</span>
-                        <a class="button" href="#">Add Book</a>
-                        <a class="button" href="#">Profile</a>
-                    </div>
-                </section>
-            </nav>
-        </header>
+{% extends 'base.html' %}
+{% block content %}
 
         <!-- Details Page -->
         <section id="details-page" class="details">
@@ -41,26 +17,8 @@
                 <p>Feyre's survival rests upon her ability to hunt and kill; the forest where she lives is a cold,
                     bleak place in the long winter months. So when she spots a deer in the forest being pursued by a
                     wolf, she cannot resist fighting it for the flesh. But to do so, she must kill the predator, and
-                    killing something so precious comes at a price. Dragged to a magical kingdom for the murder of a
-                    faerie, Feyre discovers that her captor, his face obscured by a jeweled mask, is hiding far more
-                    than his piercing green eyes would suggest. Feyre's presence at the court is closely guarded and,
-                    as she begins to learn why, her feelings for him turn from hostility to passion, and the faerie
-                    lands become an even more dangerous place. Feyre must fight to break an ancient curse, or will
-                    lose him forever. I first read A Court of Thorns and Roses (ACOTAR) 6 years ago and enjoyed the
-                    continuation of the series by the same name. When the fourth book in the series was set to release
-                    this past winter, I decided to listen to the three and half novels on audiobook to prepare. I loved
-                    revisiting the series and Sarah J Maas's world. This series is more adult than a traditional YA
-                    series (sometimes referred to as new adult or NA) but keeps all the things I love about YA. When I
-                    first read this book, I finished in 2 days. The audiobook of 16 hours was listened to in 6 days.
-                    ACOTAR has a flair for the dramatic and allowed me a fanstasy land to escape into.</p>
+                    killing something so precious comes at a price.</p>
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer id="site-footer">
-            <p>Python Web Basics Retake Exam @SoftUni</p>
-        </footer>
-    </div>
-</body>
-
-</html>
+{% endblock %}
