--- a/online_library_app/templates/profile/profile.html
+++ b/online_library_app/templates/profile/profile.html
@@ -1,46 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/static/images/library.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <title>Online Books Library</title>
-</head>
-
-<body>
-    <div id="container">
-        <header id="site-header">
-
-            <!-- Navigation -->
-            <nav class="navbar">
-                <section class="navbar-dashboard">
-                    <a href="#">Dashboard</a>
-                    <div id="user">
-                        <span>Welcome, Peter</span>
-                        <a class="button" href="#">Add Book</a>
-                        <a class="button" href="#">Profile</a>
-                    </div>
-                </section>
-            </nav>
-        </header>
-
-        <!-- Profile Page -->
-        <section id="profile-page" class="details">
-            <div class="profile-information">
-                <h3>Peter Tomov</h3>
-                <p class="img"><img src="https://thumbs.dreamstime.com/b/profile-picture-vector-perfect-social-media-other-web-use-125320533.jpg" alt=""></p>
-                <div class="actions">
-                    <a class="button" href="#">Edit</a>
-                    <a class="button" href="#">Delete</a>
-                </div>
+    <!-- Profile Page -->
+    <section id="profile-page" class="details">
+        <div class="profile-information">
+            <h3>Peter Tomov</h3>
+            <p class="img"><img
+                    src="https://thumbs.dreamstime.com/b/profile-picture-vector-perfect-social-media-other-web-use-125320533.jpg"
+                    alt=""></p>
+            <div class="actions">
+                <a class="button" href="#">Edit</a>
+                <a class="button" href="#">Delete</a>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <footer id="site-footer">
-            <p>Python Web Basics Retake Exam @SoftUni</p>
-        </footer>
-    </div>
-</body>
-
-</html>
+{% endblock %}
