--- a/online_library_app/templates/common/home-no-profile.html
+++ b/online_library_app/templates/common/home-no-profile.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/static/images/library.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" href="{% static 'images/library.jpg' %}" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Online Books Library</title>
 </head>
 
