--- a/online_library_app/templates/common/home-no-profile.html
+++ b/online_library_app/templates/common/home-no-profile.html
@@ -16,7 +16,7 @@
             <!-- Navigation -->
             <nav class="navbar">
                 <section class="navbar-dashboard">
-                    <a href="#">Dashboard</a>
+                    <a href="{% url 'index' %}">Dashboard</a>
                 </section>
             </nav>
         </header>
