--- a/online_library_app/templates/common/home-no-profile.html
+++ b/online_library_app/templates/common/home-no-profile.html
@@ -4,43 +4,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="{% static 'images/library.jpg' %}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'images/library.jpg' %}" type="image/x-icon"/>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Online Books Library</title>
 </head>
 
 <body>
-    <div id="container">
-        <header id="site-header">
+<div id="container">
+    <header id="site-header">
 
-            <!-- Navigation -->
-            <nav class="navbar">
-                <section class="navbar-dashboard">
-                    <a href="{% url 'index' %}">Dashboard</a>
-                </section>
-            </nav>
-        </header>
+        <!-- Navigation -->
+        <nav class="navbar">
+            <section class="navbar-dashboard">
+                <a href="{% url 'index' %}">Dashboard</a>
+            </section>
+        </nav>
+    </header>
 
-     <!-- No Profile Page -->
-        <section id="register-page" class="register">
-            <form id="register-form" action="" method="">
-                <fieldset>
-                    <legend>Profile Form</legend>
-                    <label for="first-name">First Name</label>
-                    <input type="text" name="first_name" maxlength="30" required="" id="first-name" placeholder="First Name">
-                    <label for="last-name">Last name</label>
-                    <input type="text" name="last_name" maxlength="30" required="" id="last-name" placeholder="Last Name">
-                    <label for="image-url">Image URL</label>
-                    <input type="url" name="image_url" maxlength="200" required="" id="image-url" placeholder="URL">
-                    <input class="button submit" type="submit" value="Enter">
-                </fieldset>
-            </form>
-        </section>
+    <!-- No Profile Page -->
+    <section id="register-page" class="register">
+        <form id="register-form" action="{% url 'create-profile' %}" method="post">
+            <fieldset>
+                {{ form }}
+                {% csrf_token %}
+                <input class="button submit" type="submit" value="Enter">
+            </fieldset>
+        </form>
+    </section>
 
-        <footer id="site-footer">
-            <p>Python Web Basics Retake Exam @SoftUni</p>
-        </footer>
-    </div>
+    <footer id="site-footer">
+        <p>Python Web Basics Retake Exam @SoftUni</p>
+    </footer>
+</div>
 </body>
 
 </html>
