--- a/online_library_app/templates/base.html
+++ b/online_library_app/templates/base.html
@@ -12,14 +12,13 @@
 <div id="container">
     <header id="site-header">
 
-        <!-- Navigation -->
         <nav class="navbar">
             <section class="navbar-dashboard">
                 <a href="{% url 'index' %}">Dashboard</a>
                 <div id="user">
-                    <span>Welcome, Peter</span>
-                    <a class="button" href="{% url 'add-book' %}">Add Book</a>
+                    <span>Welcome, {{ profile.fist_name }}</span>
                     <a class="button" href="{% url 'profile-page' %}">Profile</a>
+                    <a class="button" href="{% url 'add-book' %}">Add Book</a>
                 </div>
             </section>
         </nav>
@@ -31,7 +30,7 @@
 
 
     <footer id="site-footer">
-        <p>Python Web Basics Retake Exam @SoftUni</p>
+        <p>G.Lukanov Team !</p>
     </footer>
 </div>
 </body>
