--- a/online_library_app/templates/book/add-book.html
+++ b/online_library_app/templates/book/add-book.html
@@ -1,22 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 
-        <!-- Add Book Page -->
-        <section id="create-page" class="create">
-            <form id="create-form" action="" method="POST">
-                <fieldset>
-                    <legend>Add New Book</legend>
-                    <label for="title">Title</label>
-                    <input type="text" name="title" maxlength="30" required="" id="title" placeholder="Title">
-                    <label for="description">Description</label>
-                    <textarea name="description" cols="40" rows="100" required="" id="description" placeholder="Description"></textarea>
-                    <label for="image">Image</label>
-                    <input type="url" name="image-url" maxlength="200" required="" id="image" placeholder="Image">
-                    <label for="type">Type</label>
-                    <input type="text" name="type" maxlength="30" required="" id="type" placeholder="Fiction, Novel, Crime..">
-                    <input class="button submit" type="submit" value="Add Book">
-                </fieldset>
-            </form>
-        </section>
+    <section id="create-page" class="create">
+        <form id="create-form" action="{% url 'add-book' %}" method="POST">
+            <fieldset>
+                <legend>Add New Book</legend>
+
+                {{ form }}
+                {% csrf_token %}
+
+                <input class="button submit" type="submit" value="Add Book">
+            </fieldset>
+        </form>
+    </section>
 
 {% endblock %}
