--- a/notes_app/templates/common/home-no-profile.html
+++ b/notes_app/templates/common/home-no-profile.html
@@ -1,29 +1,9 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-        <title>Notes</title>
-    </head>
-
-    <body>
-        <!--navigation bar-->
-        <header>
-            <nav>
-                <ul>
-                    <li class="img"><img src="/static/images/note.png" width="32" height="32" /></li>
-
-                    <li><a href="/">Notes</a></li>
-                </ul>
-            </nav>
-        </header>
-        <!--end navigation bar-->
+{% extends 'base.html' %}
+{% block content %}
 
         <div class="body">
-            <!--headings-->
             <h1>Enter Your Data</h1>
-            <!--end headings-->
-
+            {# NO PROFILE ! #}
             <!--profile data form-->
             <div class="form">
                 <form method="POST">
@@ -46,8 +26,4 @@
             <!--end profile data form-->
         </div>
 
-        <footer>
-            <div>Python Web Basics Exam @SoftUni</div>
-        </footer>
-    </body>
-</html>
+{% endblock %}
