--- a/notes_app/templates/common/home-with-profile.html
+++ b/notes_app/templates/common/home-with-profile.html
@@ -1,30 +1,7 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-        <title>Notes</title>
-    </head>
-
-    <body>
-        <!--navigation bar-->
-        <header>
-            <nav>
-                <ul>
-                    <li class="img"><img src="/static/images/note.png" /></li>
-                    <li><a href="/">Notes</a></li>
-                    <li class="right">
-                        <a href="/add">Add Note</a>
-                        <a href="/profile">Profile</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!--end navigation bar-->
+{% extends 'base.html' %}
+{% block content %}
 
         <h1>My Notes</h1>
-
-
         <h2>There are no notes.</h2>
         <!--notes container-->
         <div class="note-container">
@@ -47,10 +24,4 @@
             </div>
         </div>
 
-        <!--end notes container-->
-
-        <footer>
-            <div>Python Web Basics Exam @SoftUni</div>
-        </footer>
-    </body>
-</html>
+{% endblock %}
