fix note logic1

--- a/notes_app/templates/note/note-details.html
+++ b/notes_app/templates/note/note-details.html
@@ -1,25 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 
-        <div class="body">
-            <h1>Note Details</h1>
+    <div class="body">
+        <h1>Note Details</h1>
 
-            <!--details note box-->
-            <div class="note-details-container">
-                <h2>Today's Tasks</h2>
-                <img class="detail-img" src="https://www.freeiconspng.com/thumbs/tasks-icon/tasks-icon-9.png" alt="note-image" />
-                <div>
-                    <p>Content</p>
-                </div>
-                <p>
-                    Today I need to go shopping, make some pancakes, and at the end of the day I should write some code.
-                </p>
-                <div class="right">
-                    <a class="button edit" href="/edit/4">Edit</a>
-                    <a class="button delete" href="/delete/4">Delete</a>
-                </div>
+        <div class="note-details-container">
+            <h2>{{ note.title }}</h2>
+            <img class="detail-img" src="{{ note.image_url }}"
+                 alt="note-image"/>
+            <div>
+                <p>Content</p>
             </div>
-            <!--end details note box-->
+            <p>
+                {{ note.content }}
+            </p>
+            <div class="right">
+                <a class="button edit" href="{% url 'edit-note' pk=note.pk %}">Edit</a>
+                <a class="button delete" href="{% url 'delete-note' pk=note.pk %}">Delete</a>
+            </div>
         </div>
+    
+    </div>
 
 {% endblock %}
