--- a/notes_app/templates/note/note-create.html
+++ b/notes_app/templates/note/note-create.html
@@ -1,28 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-        <div class="body">
-            <!--headings-->
-            <h1>Add Note</h1>
-            <!--headings-->
+    <div class="body">
+        <h1>Add Note</h1>
+        <div class="form">
 
-            <!--note data form-->
-            <div class="form">
-                <form method="POST">
-                    <input type="hidden" name="csrfmiddlewaretoken" value="HUrRfZ1Xv8I1kg0RCRhg5I8sTJMRfcaLEI9Pf4LGjQXUjsQgoxLnWAleb0K01njw" />
-                    <label for="name">Title</label>
-                    <input type="text" name="title" maxlength="50" required="" id="id_title" />
 
-                    <label for="content">Content</label>
-                    <textarea name="description" cols="40" rows="10" required="" id="id_description"></textarea>
+            <form method="post">
+                {{ form }}
+                {% csrf_token %}
 
-                    <label for="image_url">Link to Image</label>
-                    <input type="url" name="image_url" maxlength="200" required="" id="id_image_url" />
+                <input type="submit" value="Publish"/>
+            </form>
 
-                    <input type="submit" value="Publish" />
-                </form>
-            </div>
-            <!--end note data form-->
+
         </div>
+    </div>
 
 {% endblock %}
