--- a/notes_app/templates/common/profile.html
+++ b/notes_app/templates/common/profile.html
@@ -1,24 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
 
-        {% if profile %}
+    {% if profile %}
         <div class="body">
             <h1>Your Profile</h1>
             <div class="note-container">
                 <h2>
-                    {{ profile.first_name}} {{ profile.last_name }}
-                    <img src="{{ profile.image_url }}" />
+                    {{ profile.first_name }} {{ profile.last_name }}
+                    <img src="{{ profile.image_url }}"/>
                 </h2>
                 <p>Age: 28</p>
                 <div>
                     <p>All notes: {{ notes.count }}</p>
                 </div>
                 <div class="right">
-                    <a class="button delete" href="/delete/4">Delete</a>
+                    <a class="button delete" href="{% url 'profile-delete' %}">Delete</a>
                 </div>
             </div>
-            <!--end profile details container-->
+
         </div>
+    {% else %}
+        <h1 style="color: red;font-size: 36px;font-weight: bolder">There is no profile!</h1>
     {% endif %}
 
 {% endblock %}
