--- a/notes_app/templates/note/note-delete.html
+++ b/notes_app/templates/note/note-delete.html
@@ -4,26 +4,14 @@
         <div class="body">
             <h1>Delete Note</h1>
 
-            <!--note delete data form-->
             <div class="form">
-                <form method="POST">
-                    <input type="hidden" name="csrfmiddlewaretoken" value="hwapnt8nZjnQuJ2M6SZBuXGgOwc3fZlrekSnnyS6N1CJtVSbSytIlPT26Nac1auc" />
-                    <label for="name">Title</label>
-                    <input type="text" name="title" value="Today's Tasks" maxlength="50" disabled="" required="" id="id_title" />
-
-                    <label for="content">Content</label>
-                    <textarea name="description" cols="40" rows="10" disabled="" required="" id="id_description">
-Today I need to go shopping, make some pancakes, and at the end of the day I should write some code.
-
-                    </textarea>
-
-                    <label for="image_url">Link to Image</label>
-                    <input type="url" name="image_url" value="https://www.freeiconspng.com/thumbs/tasks-icon/tasks-icon-9.png" maxlength="200" disabled="" required="" id="id_image_url" />
-
+                <form method="POST" action="{% url 'delete-note' pk=note.pk %}">
+                    {{ form }}
+                    {% csrf_token %}
                     <input type="submit" value="Delete" />
                 </form>
             </div>
-            <!--end note delete data form-->
+
         </div>
 
 {% endblock %}
